# baqup

./: .gitignore  CLAUDE.md  DESIGN.md  pyproject.toml
config/: defaults.yml
src/: __init__.py  discovery.py  models.py
tests/: __init__.py  test_discovery.py  test_models.py
